feat(backend): 后端获取初始化数据新增未读消息数量字段
